Update Optimizing Pandas Data Types.ipynb

--- a/Optimizing Pandas Data Types.ipynb
+++ b/Optimizing Pandas Data Types.ipynb
@@ -46,11 +46,11 @@
     "\r\n",
     "2. **Setup** <br/><br/>\r\n",
     "\r\n",
-    "3. Safing Memory with **Feature Engineering**\r\n",
+    "3. Saving Memory with **Feature Engineering**\r\n",
     "    - 3.1 Dropping the Noise\r\n",
     "    - 3.2 Parsing Information to new columns <br/><br/>\r\n",
     "\r\n",
-    "4. Safing Memory with **Downcasting**\r\n",
+    "4. Saving Memory with **Downcasting**\r\n",
     "    - 4.1 Defining the downcast-function\r\n",
     "    - 4.2. batch-import csv + downcasting <br/><br/>\r\n",
     "\r\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3. Safing Memory with Feature Engineering\r\n",
+    "## 3. Saving Memory with Feature Engineering\r\n",
     "Sometimes it is enough to just have a look at the columns and the information they give. Logical reasoning before technical aspects pays off, in my experience.\r\n",
     "- Does this column hold any valuable information?\r\n",
     "- Does it contain any noise that I can get rid off?\r\n",
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 4. Safing Memory with Downcasting\r\n",
+    "## 4. Saving Memory with Downcasting\r\n",
     "\r\n",
     "### 4.1 Defining the downcast-function\r\n",
     "The function consists of 3 main parts: categorize the strings, downcast the integers, downcast the floats. Apart from that it also returns a print with the amount of the memory reduction.\r\n"
